Fixed some Sense UI layout issues with unselected choices, and started catching bad startups for phones which don't explicitly show you the message

--- a/application/resources/polish.css
+++ b/application/resources/polish.css
@@ -195,7 +195,8 @@ focused{
 
 .cgEmptyFocus extends cgItemFocused {
     background-color: white;
-    border-color: white;
+    /*border-color: white;*/
+    border: none;
     before: white;
 }
 
